Update security config
Removed CorsConfig and moved CORS configuration into SecurityConfig with updated allowed origins. Consolidated UserRepository into the auth package and updated references. Added StatusController with root and /ping endpoints for health checks. Updated WebSocketConfig to use new endpoint and allowed origins. Improved AuthController responses and registration logic.