@@ -9,19 +9,14 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-<<<<<<< Updated upstream
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-=======
->>>>>>> Stashed changes
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-<<<<<<< Updated upstream
 import java.util.Arrays;
-=======
->>>>>>> Stashed changes
 import java.util.List;
+
 
 @Configuration
 @EnableWebSecurity
@@ -33,20 +28,12 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-<<<<<<< Updated upstream
-                .csrf(csrf -> csrf.disable()) // Disable CSRF for external API calls
-=======
                 .csrf(csrf -> csrf.disable())
->>>>>>> Stashed changes
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/", "/ping").permitAll()
                         .requestMatchers("/api/auth/**").permitAll()
-<<<<<<< Updated upstream
-                        .requestMatchers("/ws-auth/**").permitAll()
+                        .requestMatchers("/ws/**", "/ws-auth/**").permitAll()
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
-=======
-                        .requestMatchers("/ws/**").permitAll()
->>>>>>> Stashed changes
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -57,28 +44,20 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-<<<<<<< Updated upstream
-        // Allow both local and production origins
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "https://supplymind-frontend-7c89888c6700.herokuapp.com"
-        ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-=======
 
-        configuration.setAllowedOriginPatterns(List.of(
+        // Merged origins from both upstream and local stashes
+        configuration.setAllowedOriginPatterns(Arrays.asList(
                 "http://localhost:5173",
                 "https://localhost:5173",
                 "http://192.168.*.*",
                 "https://192.168.*.*",
                 "https://*.ngrok-free.app",
-                "https://*.ngrok-free.dev"
+                "https://*.ngrok-free.dev",
+                "https://supplymind-frontend-7c89888c6700.herokuapp.com"
         ));
 
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
->>>>>>> Stashed changes
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
